--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,10 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
 <script>
-    const socket = io();
+    const socket = io({
+        transports: ['websocket'], // 웹소켓 연결만 사용하도록 강제
+        upgrade: false             // 연결 업그레이드 시도하지 않도록 설정
+    });
     let qrcode = new QRCode(document.getElementById("qrcode"), { width: 200, height: 200 });
     let downloadQrcode = new QRCode(document.getElementById("downloadQrcodeElement"), { width: 150, height: 150 });
 
