--- a/public/index.html
+++ b/public/index.html
@@ -3,76 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>전시회 AI 이미지 변환 디스플레이</title>
+    <title>AI 이미지 변환 - 시작</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <div class="container">
-    <h1>AI 스타일 변환 부스 ✨</h1>
-    <div id="status">세션을 생성하는 중...</div>
+    <h1>✨ AI 이미지 변환 시작</h1>
 
-    <div id="qrCodeDisplay" style="display:none;">
-        <p>모바일로 아래 QR 코드를 스캔하여 이미지를 업로드하세요!</p>
-        <div id="qrcode"></div>
-    </div>
+    <section id="uploadSection" class="section-box">
+        <input type="file" **accept="image/\*"** id="fileUploader">
+        <button id="uploadButton" class="btn primary-btn">📸 사진/파일 업로드</button>
+        <img id="originalImage" alt="업로드된 원본 이미지" style="display: none;">
+    </section>
 
-    <div id="imageDisplay" style="display:none;">
-        <div class="image-box">
-            <p>원본 이미지:</p>
-            <img id="originalImage" src="" alt="업로드된 원본 이미지" class="image-preview">
-        </div>
+    <section id="aiProcessingArea" class="section-box" style="display: none;">
+        <h3>AI 변환 스타일 설정</h3>
 
-        <div class="image-box">
-            <p>AI 변환 이미지:</p>
-            <img id="transformedImage" src="" alt="AI 변환 이미지" class="image-preview">
-        </div>
+        <textarea id="promptInput" placeholder="원하는 스타일이나 설명을 입력하세요..."
+                  rows="3" class="input-full"></textarea>
 
-        <div id="downloadQrCode" class="download-qr-code">
-            <p>변환된 이미지를 **다운로드**하려면 아래 QR 코드를 스캔하세요! 👇</p>
-            <div id="downloadQrcodeElement"></div>
-        </div>
-    </div>
+        <select id="styleSelect" class="input-full">
+            <option value="default">스타일 선택 (선택 사항)</option>
+            <option value="cartoon">카툰 스타일</option>
+            <option value="oilpainting">유화 스타일</option>
+        </select>
+
+        <button id="aiConvertButton" class="btn secondary-btn">✨ AI로 변환하기</button>
+
+        <p id="loadingStatus" class="status-text" style="display: none;">AI 이미지 생성 중입니다. 잠시만 기다려주세요...</p>
+    </section>
 </div>
 
-<script src="/socket.io/socket.io.js"></script>
-<script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+
 <script>
-    const socket = io({
-        transports: ['websocket'], // 웹소켓 연결만 사용하도록 강제
-        upgrade: false             // 연결 업그레이드 시도하지 않도록 설정
-    });
-    let qrcode = new QRCode(document.getElementById("qrcode"), { width: 200, height: 200 });
-    let downloadQrcode = new QRCode(document.getElementById("downloadQrcodeElement"), { width: 150, height: 150 });
+    document.addEventListener('DOMContentLoaded', () => {
+        // ... (요소 변수 선언 생략)
+        const fileUploader = document.getElementById('fileUploader');
+        const uploadButton = document.getElementById('uploadButton');
+        const originalImage = document.getElementById('originalImage');
+        const aiProcessingArea = document.getElementById('aiProcessingArea');
+        const aiConvertButton = document.getElementById('aiConvertButton');
+        const loadingStatus = document.getElementById('loadingStatus');
 
-    socket.emit('createSession'); // 서버에 세션 생성 요청
+        let uploadedFile = null;
 
-    socket.on('sessionCreated', (data) => {
-        const uploadUrl = window.location.origin + data.uploadUrl;
-        qrcode.makeCode(uploadUrl);
-        document.getElementById('status').innerText = '업로드 대기 중';
-        document.getElementById('qrCodeDisplay').style.display = 'block';
-    });
+        // 파일 선택 창 열기
+        uploadButton.addEventListener('click', () => { fileUploader.click(); });
 
-    // 모바일 업로드 완료 시 (실시간)
-    socket.on('imageUploaded', (data) => {
-        document.getElementById('qrCodeDisplay').style.display = 'none';
-        document.getElementById('imageDisplay').style.display = 'flex'; // 이미지 영역 표시
-        document.getElementById('originalImage').src = data.imageUrl;
-        document.getElementById('status').innerText = '이미지 업로드 완료! AI 변환 중...';
+        // 파일이 선택되었을 때
+        fileUploader.addEventListener('change', (event) => {
+            uploadedFile = event.target.files[0];
+            if (!uploadedFile) return;
 
-        // 기존 이미지 초기화
-        document.getElementById('transformedImage').src = '';
-        document.getElementById('downloadQrCode').style.display = 'none';
-    });
+            const reader = new FileReader();
+            reader.onload = (e) => {
+                originalImage.src = e.target.result;
+                originalImage.style.display = 'block';
+                aiProcessingArea.style.display = 'block';
+            };
+            reader.readAsDataURL(uploadedFile);
+        });
 
-    // AI 변환 완료 시 (실시간)
-    socket.on('imageTransformed', (data) => {
-        document.getElementById('transformedImage').src = data.transformedImageUrl;
-        document.getElementById('status').innerText = 'AI 변환 완료!';
+        // AI 변환 버튼 클릭 시
+        aiConvertButton.addEventListener('click', async () => {
+            const prompt = document.getElementById('promptInput').value;
+            const style = document.getElementById('styleSelect').value;
 
-        // 다운로드 QR 코드 생성 (다운로드 URL을 QR 코드로 인코딩)
-        downloadQrcode.makeCode(window.location.origin + data.transformedImageUrl);
-        document.getElementById('downloadQrCode').style.display = 'block';
+            if (!uploadedFile) return alert('이미지를 업로드해주세요.');
+            if (!prompt) return alert('프롬프트를 입력해주세요.');
+
+            loadingStatus.style.display = 'block';
+            aiConvertButton.disabled = true;
+
+            // 백엔드 API 호출을 위한 FormData 생성
+            const formData = new FormData();
+            formData.append('image', uploadedFile);
+            formData.append('prompt', prompt);
+            formData.append('style', style);
+
+            try {
+                const response = await fetch('/api/ai-process', {
+                    method: 'POST',
+                    body: formData
+                });
+
+                if (!response.ok) {
+                    throw new Error(`AI 서버 오류: ${response.statusText}`);
+                }
+
+                const data = await response.json();
+                const aiImageUrl = data.aiImageUrl;
+
+                if (aiImageUrl) {
+                    // **download.html로 이동 및 결과 URL 전달**
+                    window.location.href = `download.html?url=${encodeURIComponent(aiImageUrl)}`;
+                } else {
+                    alert('AI 변환 결과 URL을 받지 못했습니다.');
+                }
+
+            } catch (error) {
+                alert('이미지 변환에 실패했습니다. 서버 상태를 확인해주세요.');
+                console.error('Fetch Error:', error);
+            } finally {
+                loadingStatus.style.display = 'none';
+                aiConvertButton.disabled = false;
+            }
+        });
     });
 </script>
 </body>
