--- a/public/index.html
+++ b/public/index.html
@@ -3,84 +3,127 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI 이미지 변환 - 시작</title>
+    <title>AI 이미지 스튜디오</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="container">
-    <h1>✨ AI 이미지 변환 시작</h1>
+    <h1>🎨 AI 이미지 변환/생성 스튜디오</h1>
 
-    <section id="uploadSection" class="section-box">
-        <input type="file" **accept="image/\*"** id="fileUploader">
-        <button id="uploadButton" class="btn primary-btn">📸 사진/파일 업로드</button>
-        <img id="originalImage" alt="업로드된 원본 이미지" style="display: none;">
+    <div class="mode-selector">
+        <button class="btn mode-btn" data-mode="image">📷 이미지 변환 (Image to Image)</button>
+        <button class="btn mode-btn" data-mode="text">📝 텍스트 생성 (Text to Image)</button>
+        <button class="btn mode-btn" data-mode="qr">📱 QR 코드 스캔/업로드</button>
+    </div>
+
+    <section id="imageMode" class="section-box mode-content" style="display: none;">
+        <h3>📷 이미지 업로드 및 변환</h3>
+        <input type="file" accept="image/*" id="fileUploader" style="display: none;">
+        <button id="uploadButton" class="btn primary-btn">파일 선택 (앨범/파일 접근 가능)</button>
+        <img id="originalImage" alt="업로드된 원본 이미지" class="preview-img" style="display: none;">
+        <p id="fileStatus" class="status-text"></p>
     </section>
 
-    <section id="aiProcessingArea" class="section-box" style="display: none;">
-        <h3>AI 변환 스타일 설정</h3>
-
-        <textarea id="promptInput" placeholder="원하는 스타일이나 설명을 입력하세요..."
+    <section id="textMode" class="section-box mode-content" style="display: none;">
+        <h3>📝 텍스트로 이미지 생성</h3>
+        <textarea id="textPromptInput" placeholder="생성하고 싶은 이미지를 상세히 설명하세요..."
                   rows="3" class="input-full"></textarea>
+        <p class="status-text">스타일은 아래 공통 설정을 따릅니다.</p>
+    </section>
 
+    <section id="qrMode" class="section-box mode-content" style="display: none;">
+        <h3>📱 QR 코드 스캔 (기능 연동 필요)</h3>
+        <p class="status-text">QR 코드를 스캔하여 바로 이미지/텍스트를 입력할 수 있습니다.</p>
+        <button class="btn primary-btn">QR 코드 스캔 시작</button>
+    </section>
+
+    <section id="commonAISettings" class="section-box" style="display: none;">
+        <h3>공통 AI 설정</h3>
+        <textarea id="stylePromptInput" placeholder="AI 스타일 추가 설명..." rows="2" class="input-full"></textarea>
         <select id="styleSelect" class="input-full">
             <option value="default">스타일 선택 (선택 사항)</option>
             <option value="cartoon">카툰 스타일</option>
             <option value="oilpainting">유화 스타일</option>
         </select>
 
-        <button id="aiConvertButton" class="btn secondary-btn">✨ AI로 변환하기</button>
+        <button id="aiConvertButton" class="btn secondary-btn">✨ AI로 변환/생성하기</button>
 
         <p id="loadingStatus" class="status-text" style="display: none;">AI 이미지 생성 중입니다. 잠시만 기다려주세요...</p>
     </section>
 </div>
 
-
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         // ... (요소 변수 선언 생략)
-        const fileUploader = document.getElementById('fileUploader');
-        const uploadButton = document.getElementById('uploadButton');
-        const originalImage = document.getElementById('originalImage');
-        const aiProcessingArea = document.getElementById('aiProcessingArea');
-        const aiConvertButton = document.getElementById('aiConvertButton');
-        const loadingStatus = document.getElementById('loadingStatus');
-
+        let currentMode = 'image'; // 현재 모드
         let uploadedFile = null;
 
-        // 파일 선택 창 열기
-        uploadButton.addEventListener('click', () => { fileUploader.click(); });
+        // 모드 전환 로직
+        document.querySelectorAll('.mode-btn').forEach(button => {
+            button.addEventListener('click', () => {
+                currentMode = button.dataset.mode;
+                document.querySelectorAll('.mode-content').forEach(content => {
+                    content.style.display = 'none';
+                });
+                document.getElementById(currentMode + 'Mode').style.display = 'block';
+                document.getElementById('commonAISettings').style.display = 'block';
+                document.querySelectorAll('.mode-btn').forEach(b => b.classList.remove('active'));
+                button.classList.add('active');
+            });
+        });
 
-        // 파일이 선택되었을 때
-        fileUploader.addEventListener('change', (event) => {
+        // 초기 모드 설정
+        document.querySelector('.mode-btn[data-mode="image"]').click();
+
+        // 파일 업로드 로직 (이전 코드와 동일)
+        document.getElementById('uploadButton').addEventListener('click', () => {
+            document.getElementById('fileUploader').click();
+        });
+        document.getElementById('fileUploader').addEventListener('change', (event) => {
             uploadedFile = event.target.files[0];
             if (!uploadedFile) return;
 
             const reader = new FileReader();
             reader.onload = (e) => {
-                originalImage.src = e.target.result;
-                originalImage.style.display = 'block';
-                aiProcessingArea.style.display = 'block';
+                document.getElementById('originalImage').src = e.target.result;
+                document.getElementById('originalImage').style.display = 'block';
+                document.getElementById('fileStatus').textContent = `선택된 파일: ${uploadedFile.name}`;
             };
             reader.readAsDataURL(uploadedFile);
         });
 
-        // AI 변환 버튼 클릭 시
-        aiConvertButton.addEventListener('click', async () => {
-            const prompt = document.getElementById('promptInput').value;
+        // AI 변환 버튼 클릭 시 (통합 로직)
+        document.getElementById('aiConvertButton').addEventListener('click', async () => {
+            let prompt = '';
             const style = document.getElementById('styleSelect').value;
+            const stylePrompt = document.getElementById('stylePromptInput').value;
 
-            if (!uploadedFile) return alert('이미지를 업로드해주세요.');
-            if (!prompt) return alert('프롬프트를 입력해주세요.');
+            // 1. 모드별 유효성 검사 및 프롬프트 설정
+            if (currentMode === 'image') {
+                if (!uploadedFile) return alert('이미지를 업로드해주세요.');
+                prompt = '이미지를 AI 스타일로 변환: ' + stylePrompt; // Image to Image
+            } else if (currentMode === 'text') {
+                prompt = document.getElementById('textPromptInput').value;
+                if (!prompt) return alert('생성할 텍스트를 입력해주세요.');
+                prompt += (stylePrompt ? ', ' + stylePrompt : ''); // Text to Image
+            } else if (currentMode === 'qr') {
+                // QR 코드로 획득한 이미지를 uploadedFile에 할당하거나, 텍스트를 prompt에 할당하는 로직 필요
+                alert('QR 코드 스캔 후, 이미지 또는 텍스트 데이터를 먼저 설정해야 합니다.');
+                return;
+            }
 
-            loadingStatus.style.display = 'block';
-            aiConvertButton.disabled = true;
+            // 공통 처리 시작
+            document.getElementById('loadingStatus').style.display = 'block';
+            document.getElementById('aiConvertButton').disabled = true;
 
-            // 백엔드 API 호출을 위한 FormData 생성
             const formData = new FormData();
-            formData.append('image', uploadedFile);
+            if (uploadedFile && currentMode === 'image') {
+                formData.append('image', uploadedFile);
+            }
             formData.append('prompt', prompt);
             formData.append('style', style);
+            formData.append('mode', currentMode); // 백엔드에서 어떤 모드인지 확인용
 
             try {
                 const response = await fetch('/api/ai-process', {
@@ -96,18 +139,18 @@
                 const aiImageUrl = data.aiImageUrl;
 
                 if (aiImageUrl) {
-                    // **download.html로 이동 및 결과 URL 전달**
+                    // 다운로드 페이지로 이동 및 결과 URL 전달
                     window.location.href = `download.html?url=${encodeURIComponent(aiImageUrl)}`;
                 } else {
                     alert('AI 변환 결과 URL을 받지 못했습니다.');
                 }
 
             } catch (error) {
-                alert('이미지 변환에 실패했습니다. 서버 상태를 확인해주세요.');
+                alert('이미지 변환에 실패했습니다. (서버/AI 통신 오류)');
                 console.error('Fetch Error:', error);
             } finally {
-                loadingStatus.style.display = 'none';
-                aiConvertButton.disabled = false;
+                document.getElementById('loadingStatus').style.display = 'none';
+                document.getElementById('aiConvertButton').disabled = false;
             }
         });
     });
